--- a/UIs/Console/Console.csproj
+++ b/UIs/Console/Console.csproj
@@ -49,11 +49,11 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj">
+    <ProjectReference Include="..\..\Core\Core.csproj">
       <Project>{222E7DAA-BD46-457F-AEB4-C64795E66EDB}</Project>
       <Name>Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\DependencyResolution\DependencyResolution.csproj">
+    <ProjectReference Include="..\..\DependencyResolution\DependencyResolution.csproj">
       <Project>{02F3FE81-8FC2-4E4A-A9CA-BB27609572F9}</Project>
       <Name>DependencyResolution</Name>
     </ProjectReference>
