Performing basic dependency injection in the code-behind of Default.aspx.

--- a/UIs/WebForms/WebForms.csproj
+++ b/UIs/WebForms/WebForms.csproj
@@ -302,6 +302,16 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\Core.csproj">
+      <Project>{222E7DAA-BD46-457F-AEB4-C64795E66EDB}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\DependencyResolution\DependencyResolution.csproj">
+      <Project>{02F3FE81-8FC2-4E4A-A9CA-BB27609572F9}</Project>
+      <Name>DependencyResolution</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
