--- a/UIs/MVC/MVC.csproj
+++ b/UIs/MVC/MVC.csproj
@@ -225,6 +225,16 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\Core.csproj">
+      <Project>{222E7DAA-BD46-457F-AEB4-C64795E66EDB}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\DependencyResolution\DependencyResolution.csproj">
+      <Project>{02F3FE81-8FC2-4E4A-A9CA-BB27609572F9}</Project>
+      <Name>DependencyResolution</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
