--- a/DependencyResolution/DependencyResolution.csproj
+++ b/DependencyResolution/DependencyResolution.csproj
@@ -55,14 +55,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NinjectConventionResolver.cs" />
+    <Compile Include="Resolvers\NinjectConventionResolver.cs" />
     <Compile Include="NinjectModuleExtensions.cs" />
-    <Compile Include="NinjectResolver.cs" />
+    <Compile Include="Resolvers\NinjectResolver.cs" />
     <Compile Include="Resolver.cs" />
-    <Compile Include="IResolver.cs" />
-    <Compile Include="NinjectExplicitResolver.cs" />
+    <Compile Include="Resolvers\IResolver.cs" />
+    <Compile Include="Resolvers\NinjectExplicitResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UnityResolver.cs" />
+    <Compile Include="Resolvers\UnityResolver.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
