--- a/DependencyResolution/DependencyResolution.csproj
+++ b/DependencyResolution/DependencyResolution.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{02F3FE81-8FC2-4E4A-A9CA-BB27609572F9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LearningNinject.DependencyResolution</RootNamespace>
-    <AssemblyName>LearningNinject.DependencyResolution</AssemblyName>
+    <RootNamespace>LearningIoC.DependencyResolution</RootNamespace>
+    <AssemblyName>LearningIoC.DependencyResolution</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
