--- a/UIs/Console/Console.csproj
+++ b/UIs/Console/Console.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A412F5BC-7407-4819-A333-87A806DD446B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LearningNinject.Console</RootNamespace>
-    <AssemblyName>LearningNinject.Console</AssemblyName>
+    <RootNamespace>LearningIoC.Console</RootNamespace>
+    <AssemblyName>LearningIoC.Console</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
