--- a/DependencyResolution/packages.config
+++ b/DependencyResolution/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
   <package id="Ninject.Extensions.Conventions" version="3.2.0.0" targetFramework="net45" />
+  <package id="structuremap" version="3.0.3.116" targetFramework="net45" />
   <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
 </packages>
